--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,102 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="0dp"
+    android:clipToPadding="true"
+    android:overScrollMode="never"
+    android:background="@color/teal_200">
 
-    <Button
-        android:id="@+id/bt_get_weather"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/et_enter_city"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp"
-        android:backgroundTint="@color/purple_700"
-        android:text="@string/get_weather"
-        android:textAlignment="center"
-        android:textColor="@color/white" />
-
-    <EditText
-        android:id="@+id/et_enter_city"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="16dp"
-        android:drawableEnd="@drawable/search_icon"
-        android:gravity="center_horizontal"
-        android:hint="@string/hint_text" />
+        android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:id="@+id/result_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/bt_get_weather"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="16dp"
-        android:orientation="vertical">
+        <EditText
+            android:id="@+id/et_enter_city"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="16dp"
+            android:gravity="center_horizontal"
+            android:hint="@string/hint_text"
+            android:inputType="text" />
 
-        <TextView
-            android:id="@+id/my_location"
+        <Button
+            android:id="@+id/bt_get_weather"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:textStyle="bold"
-            android:textSize="28sp"
-            android:text="My Location" />
-
-        <TextView
-            android:id="@+id/city_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:textStyle="bold"
-            android:textSize="16sp"
-            android:text="City Name" />
-
-        <TextView
-            android:id="@+id/current_temp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="32sp"
-            android:textStyle="bold"
-            android:layout_gravity="center_horizontal"
-            android:text="75" />
-
-        <TextView
-            android:id="@+id/current_condition"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:textStyle="bold"
-            android:textSize="16sp"
-            android:text="Clear" />
+            android:layout_below="@id/et_enter_city"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="16dp"
+            android:enabled="false"
+            android:text="@string/get_weather"
+            android:textAlignment="center" />
 
         <LinearLayout
-            android:id="@+id/high_low_temp_container"
-            android:layout_width="wrap_content"
+            android:id="@+id/result_layout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:orientation="horizontal">
+            android:layout_below="@id/bt_get_weather"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="16dp"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/weather_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal" />
 
             <TextView
-                android:id="@+id/high_temp"
+                android:id="@+id/city_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:textSize="28sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/current_temp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/feels_like"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:textSize="16sp"
-                android:textStyle="bold"
-                android:text="H:95" />
+                android:textStyle="bold" />
+
 
             <TextView
-                android:id="@+id/low_temp"
+                android:id="@+id/current_condition"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
                 android:layout_gravity="center_horizontal"
                 android:textSize="16sp"
-                android:textStyle="bold"
-                android:text="L:73" />
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:id="@+id/high_low_temp_container"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/high_temp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/low_temp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginStart="10dp"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/disclaimer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/disclaimer_text"
+                android:textSize="12sp"
+                android:visibility="gone" />
+
         </LinearLayout>
 
-    </LinearLayout>
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone" />
 
-</RelativeLayout>
+    </RelativeLayout>
+</ScrollView>
